GNOME Bugzilla – Bug 112713
Quit/close confirmation dialog is not HIG compliant
Last modified: 2004-12-22 21:47:04 UTC
Current confirmation dialogs for unsaved changes are not HIG conform.
Created attachment 16410 [details] [review] patch
Perhaps somebody can explain to me why "cancel" is a clearer term than "Don't quit."
By having a "Cancel" button in all message dialogs that need this action, in all gnome, user gets used with its meaning more quickly -> get rid of this dialog I opened by mistake... If you want, I can change my patch in order to have a "Don't quit" button, with the Cancel stock icon.
Don't Quit with the cancel icon sounds like a good compromise.
I agree.
I will update my patch to change the 'cancel' label to 'Don't quit'. By the way, I don't like very much the message dialog with 5 buttons, when there's more than one file to save (which look bad when the label translation are longer than the english version). Other apps tend to present a confirmation dialog for each unsaved document. Do you think that gnumeric should follow this behaviour ? I know that will lead to a review of each unsaved workbook, which can be painfull when you have 10 unsaved workbook. But, who works with 10 open documents ?
Lots of people work with multiple open documents. In fact, gnumeric used to require an answer for every single documen (as you suggest)t. It was the result of user complaints/wishes that the 5-button dialog was introduced.
What do you think of a 'apply to all unsaved workbook' checkbox ?
Such a checkbox would just require 2 mouse clicks to say `save all' rather than just one. I would therefore rather stick with the current implementation.
Why is it, btw., that we build this dialog in C as opposed to glade?
The `Discard' and `Discard all' buttons should probably have a trash can icon...
Created attachment 16501 [details] [review] updated patch with 'Don't quit' and stock icons
The HIG specifies what Save confirmation dialogues should be like: http://developer.gnome.org/projects/gup/hig/1.0/windows.html#save-confirmation-alerts
gmorten : this dialog can't be done in glade. A user needs to be able to quit even if there is an installation problem and the glade files are confused. Sorry Seth, but while consistency is good, Cancel is a pet peeve of mine. Applied with "Don't Quit"